<resources>

    <string name="app_name">Hipster</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="today">Vandaag</string>
    <string name="tomorrow">Morgen</string>
    <string name="recent_grades">Laatste Cijfers</string>
    <string name="login">Inloggen</string>
    <string name="dashboard">Dashboard</string>
    <string name="grades">Cijfers</string>
    <string name="timetable">Rooster</string>
    <string name="settings">Instellingen</string>
    <string name="logo">Logo</string>
    <string name="school">School</string>
    <string name="username">Gebruikersnaam</string>
    <string name="password">Wachtwoord</string>
    <string name="invalid_school">Voer een geldige school in</string>
    <string name="invalid_password">Fout wachtwoord</string>
    <string name="profile_picture">Profielfoto</string>
    <string name="logout">Uitloggen</string>
    <string name="no_internet">Geen internet</string>
    <string name="no_appointments">Helemaal niks!</string>
    <string name="color">Kleur</string>
    <string name="user_interface">Gebruikersinterface</string>
    <string name="account">Account</string>
    <string name="add_account">Voeg account toe</string>
    <string name="set_account">Verander van account</string>
    <string name="unknown_error">Onbekende fout</string>
    <string name="logged_off">Nog niet ingelogd! Je kan dit doen in het menu.</string>
    <string name="back">Terug</string>
    <string name="not_logged_in">Niet ingelogd</string>
    <string name="toolbar_avatar">Toolbar afbeelding</string>
    <string name="toolbar_avatar_desc">Geef jouw Magister profiel foto weer in de toolbar</string>
    <string name="about">Over</string>
    <string name="color_desc">Stel de kleur van de toolbar in</string>

</resources>
