<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

    <PreferenceCategory
            android:title="@string/user_interface">

        <Preference
                android:title="@string/color"
                android:key="@string/color"/>

        <CheckBoxPreference
                android:key="@string/toolbar_avatar"
                android:title="@string/toolbar_avatar"
                android:summary="@string/toolbar_avatar_desc"
                android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/account">

        <Preference
                android:title="@string/add_account"
                android:key="@string/add_account"/>

        <Preference
                android:title="@string/set_account"
                android:key="@string/set_account"/>

        <Preference
                android:title="@string/logout"
                android:key="@string/logout"/>

    </PreferenceCategory>

</PreferenceScreen>