<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_dashboard"
                android:icon="@drawable/ic_class_black_24dp"
                android:checked="true"
                android:title="@string/dashboard"/>

        <item
                android:id="@+id/nav_grades"
                android:icon="@drawable/ic_done_all_black_24dp"
                android:title="@string/grades"/>

        <item
                android:id="@+id/nav_timetable"
                android:icon="@drawable/ic_watch_later_black_24dp"
                android:title="@string/timetable"/>

        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings"/>

    </group>

</menu>
