<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF">

    <RelativeLayout
            android:orientation="horizontal"
            android:id="@+id/login_toolbar"
            android:background="@color/primary"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        <TextView
                android:textSize="64sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/app_name"/>

    </RelativeLayout>

    <ImageView
            android:id="@+id/login_circle"
            android:src="@drawable/circle"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:layout_below="@id/login_toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-50dip"/>

    <ImageView
            android:id="@+id/login_icon"
            android:layout_alignTop="@id/login_circle"
            android:layout_alignLeft="@id/login_circle"
            android:src="@drawable/ic_people_black_24dp"
            android:tint="@color/primary"
            android:layout_height="100dp"
            android:layout_width="120dp"/>

    <EditText
            android:id="@+id/input_school"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginBottom="10dip"
            android:layout_below="@id/login_icon"
            android:inputType="text"
            android:hint="@string/school"/>

    <EditText
            android:id="@+id/input_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginBottom="10dip"
            android:layout_below="@id/input_school"
            android:inputType="text"
            android:hint="@string/username"/>

    <EditText
            android:id="@+id/input_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginBottom="10dip"
            android:layout_below="@id/input_username"
            android:inputType="textPassword"
            android:hint="@string/password"/>

    <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="20dip"
            android:layout_marginBottom="10dip"
            android:layout_below="@id/input_password"
            android:text="@string/login"
            />
</RelativeLayout>